Gitignore structure and GitHub Pages Configuration

--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,12 @@
 }
 
 
+
+@techreport{abdurrob2016,
+	title = {Advanced Options},
+	author = {Abdurrob, Abdurrahman and Kulldorff, Martin},
+	year = {2016},
+	month = {08},
+	date = {2016-08},
+	address = {Boston}
+}
