--- a/Smart-Choices-for-Measurement-Model.tex
+++ b/Smart-Choices-for-Measurement-Model.tex
@@ -203,7 +203,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={PLS-SEM Interactive Tutorial},
+  pdftitle={Smart Choices for Measurement Model},
   pdfauthor={Pablo Rogers},
   colorlinks=true,
   linkcolor={blue},
@@ -212,20 +212,28 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{PLS-SEM Interactive Tutorial}
+\title{Smart Choices for Measurement Model}
 \usepackage{etoolbox}
 \makeatletter
 \providecommand{\subtitle}[1]{% add subtitle to \maketitle
   \apptocmd{\@title}{\par {\large #1 \par}}{}{}
 }
 \makeatother
-\subtitle{Step-by-Step with cSEM package}
+\subtitle{Dynamic Tutorial for your Confirmatory Factor Analysis in R
+Environment}
 \author{Pablo Rogers}
-\date{26/12/23}
+\date{27/12/23}
 
 \begin{document}
 \maketitle
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, breakable, interior hidden, sharp corners, boxrule=0pt, enhanced, borderline west={3pt}{0pt}{shadecolor}]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[breakable, interior hidden, frame hidden, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt, enhanced, sharp corners]}{\end{tcolorbox}}\fi
+
+\bookmarksetup{startatroot}
+
+\hypertarget{citation}{%
+\section*{Citation}\label{citation}}
+
+\markboth{Citation}{Citation}
 
 \bookmarksetup{startatroot}
 
@@ -235,7 +243,7 @@
 
 \markboth{Abstract}{Abstract}
 
-This is a Quarto book.
+This is a Quarto article.
 
 To learn more about Quarto books visit
 \url{https://quarto.org/docs/books}.
@@ -249,20 +257,6 @@ To learn more about Quarto books visit
 \begin{verbatim}
 [1] 2
 \end{verbatim}
-
-\hypertarget{citation}{%
-\subsection*{Citation}\label{citation}}
-\addcontentsline{toc}{subsection}{Citation}
-
-\markright{Citation}
-
-\hypertarget{license}{%
-\subsection*{License}\label{license}}
-\addcontentsline{toc}{subsection}{License}
-
-\markright{License}
-
-This work is licensed under Attribution-NonCommercial 4.0 International
 
 \bookmarksetup{startatroot}
 
