--- a/PLS-SEM-Interactive-Tutorial.tex
+++ b/PLS-SEM-Interactive-Tutorial.tex
@@ -221,19 +221,20 @@
 \makeatother
 \subtitle{Step-by-Step with cSEM package}
 \author{Pablo Rogers}
-\date{26/12/23}
+\date{December 27, 2023}
 
 \begin{document}
 \maketitle
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, breakable, interior hidden, sharp corners, boxrule=0pt, enhanced, borderline west={3pt}{0pt}{shadecolor}]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, borderline west={3pt}{0pt}{shadecolor}, frame hidden, sharp corners, boxrule=0pt, enhanced, breakable]}{\end{tcolorbox}}\fi
 
 \bookmarksetup{startatroot}
 
 \hypertarget{abstract}{%
 \section*{Abstract}\label{abstract}}
-\addcontentsline{toc}{section}{Abstract}
 
 \markboth{Abstract}{Abstract}
+
+Citation:
 
 This is a Quarto book.
 
@@ -249,20 +250,6 @@ To learn more about Quarto books visit
 \begin{verbatim}
 [1] 2
 \end{verbatim}
-
-\hypertarget{citation}{%
-\subsection*{Citation}\label{citation}}
-\addcontentsline{toc}{subsection}{Citation}
-
-\markright{Citation}
-
-\hypertarget{license}{%
-\subsection*{License}\label{license}}
-\addcontentsline{toc}{subsection}{License}
-
-\markright{License}
-
-This work is licensed under Attribution-NonCommercial 4.0 International
 
 \bookmarksetup{startatroot}
 
